640721:2100 Add memu for Patient Type

--- a/templates/DisplayMessage.html
+++ b/templates/DisplayMessage.html
@@ -1,3 +1,5 @@
+
+    </div>                        
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -19,3 +21,5 @@
         {% endfor %}
     </ul>
     {% endif %}
+
+
