--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,26 +19,23 @@
     <!-- Standard iPhone Touch Icon-->
     <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
     <!-- Styles -->
-    <link href="{% static 'assets/css/lib/calendar2/pignose.calendar.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/lib/chartist/chartist.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/lib/font-awesome.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/lib/themify-icons.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/lib/owl.carousel.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'assets/css/lib/owl.theme.default.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'assets/css/lib/weather-icons.css' %}" rel="stylesheet" />
-    <link href="{% static 'assets/css/lib/menubar/sidebar.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/lib/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/lib/helper.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/lib/font-awesome.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/lib/themify-icons.css ' %} " rel="stylesheet" />
+    <link href="{% static 'assets/css/lib/menubar/sidebar.css '%} " rel="stylesheet" />
+
+    <link href="{% static 'assets/css/lib/bootstrap.min.css '%} " rel="stylesheet" />
+    <link href="{% static 'assets/css/lib/helper.css '%} " rel="stylesheet" />
+    <link href="{% static 'assets/css/style.css '%} " rel="stylesheet" />
 </head>
 
 <body>
 
     <div class="sidebar sidebar-hide-to-small sidebar-shrink sidebar-gestures">
+    
         <div class="nano">
             <div class="nano-content">
                 <ul>
-                    <div class="logo"><a href="{% url 'Patient:List' %}">
+                    <div class="logo"><a href="{% url 'Patient:Dashboard' %}">
                             <img class="pic" src="{% static 'assets/images/RTAF.png' %}" alt="" /><span>AFCOVID</span>
                             <style>
                                 .pic {
@@ -50,33 +47,38 @@
                             </style>
 
                         </a></div>
-<!--                    
-                    <li><a class="sidebar-sub-toggle"><i class="fa fa-signal" aria-hidden="true"></i> Dashboard </a>
-                    </li>
-!-->
+
                     <li>
-                        <a href="{% url 'Patient:List' %}">
-                            <i class="fa fa-address-card-o" aria-hidden="true"></i> รายชื่อทั้งหมด
-                        </a>
-                    </li>
-<!--
-                    <li>
-                        <a href="{% url 'Patient:Infect'%}">
-                            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-                            ผู้ติดเชื้อ 
+                        <a href="{% url 'Patient:List' 0 %}">
+                            <i class="fa fa-address-card" aria-hidden="true"></i> รายชื่อผู้ป่วยทั้งหมด
                         </a>
                     </li>
 
                     <li>
-                        <a href="app-event-calender.html">
-                            <i class="fa fa-random" aria-hidden="true"></i>
-                            ผู้มีความเสี่ยง 
+                        <a href="{% url 'Patient:List' 1 %}">
+                            <i class="fa fa-hospital" aria-hidden="true"></i></i> รายชื่อผู้มีข้อมูลใน AMED
                         </a>
                     </li>
 
-                    <li><a href="app-event-calender.html"><i class="fa fa-book" aria-hidden="true"></i>
-                            คู่มือการใช้ </a></li>                            
--->
+                    <li>
+                        <a href="{% url 'Patient:List' 2 %}">
+                            <i class="fa fa-user" aria-hidden="true"></i></i> รายชื่อผู้ป่วยพลทหาร
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="{% url 'Patient:List' 3 %}">
+                            <i class="fa fa-users" aria-hidden="true"></i></i> รายชื่อผู้ป่วยยกเว้นพลทหาร
+                        </a>
+                    </li>
+
+                    {% comment %} 
+                    <li>
+                        <a href="{% url 'Patient:Detail' 1 %}">
+                            <i class="fa fa-book" aria-hidden="true"></i> คู่มือการใช้
+                        </a>
+                    </li>                 
+                    {% endcomment %}
                 </ul>
             </div>
         </div>
@@ -94,14 +96,11 @@
                             <span class="line"></span>
                         </div>
                     </div>
+  
+
+
                     <div class="float-right">
-<!--
-                        <div class="dropdown dib">
-                            <div class="header-icon" data-toggle="dropdown">
-                                <i class="ti-user"></i>
-                            </div>
-                        </div>
--->
+
                         <div class="dropdown dib">
                             <div class="header-icon" >
                                 <a href = "/admin"><i class="ti-settings"></i></a>
@@ -122,8 +121,8 @@
 
 
     <div class="content-wrap">
-        
-        <div class="main">
+
+   
             <div class="container-fluid">
                 
                 <div class="alert alert-primary alert-dismissible fade show" role="alert">
@@ -138,10 +137,14 @@
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
+        <div class="main">
+                  
                 {% include "DisplayMessage.html" %}
-                {% block content %}
                 
+                {% block content %}
+
                 <div class="row">
+                                                
                     <div class="col-lg-8 p-r-0 title-margin-right">
                         <div class="page-header">
                             <div class="page-title">
