--- a/templates/_milk.html
+++ b/templates/_milk.html
@@ -48,8 +48,9 @@
                     </div>
 
                     <li>
-                        <a class="sidebar-sub-toggle"><i class="fa fa-signal" aria-hidden="true"></i> Dashboard
-              </a>
+                        <a class="sidebar-sub-toggle">
+                            <i class="fa fa-signal" aria-hidden="true"></i> Dashboard
+                        </a>
                     </li>
 
                     <li>
