--- a/Patient/templates/patient/List.html
+++ b/Patient/templates/patient/List.html
@@ -96,12 +96,20 @@
         {% endif %} 
         {% for i in paginator.page_range %} 
             {% if page_obj.number ==  i %}
-            <li class="page-item"><a class="page-link active">{{ i }}</a></li>
+              <li class="page-item"><a class="page-link active"><strong>{{ i }}</strong></a></li>
+            {% elif i <= 1 or i >= paginator.num_pages|add:"0" %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+              </li>                   
+            {% elif page_obj.number >=  i|add:"-1"  and page_obj.number <=  i|add:"1"%}
+              <li class="page-item">
+                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+              </li>
             {% else %}
-            <li class="page-item">
-            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-            </li>
-            {% endif %} 
+              <li class="page-item">
+                &nbsp;
+              </li>
+            {% endif %}
         {% endfor %} 
         {% if page_obj.has_next %}
         <li class="page-item">
