--- a/Patient/templates/patient/List.html
+++ b/Patient/templates/patient/List.html
@@ -5,8 +5,46 @@
 {% block title %}รายชื่อผู้ป่วย{% endblock %}
 
 {% block content %}
+    <style>    
+        form.example input[type=text] {
+        padding: 5px;
+        font-size: 17px;
+        border: 1px solid grey;
+        float: left;
+        width: 80%;
+        background: #f1f1f1;
+        }
+
+        form.example button {
+        float: left;
+        width: 20%;
+        padding: 5px;
+        background: #2196F3;
+        color: white;
+        font-size: 17px;
+        border: 1px solid grey;
+        border-left: none;
+        cursor: pointer;
+        }
+
+        form.example button:hover {
+        background: #0b7dda;
+        }
+
+        form.example::after {
+        content: "";
+        clear: both;
+        display: table;
+        }    
+    </style>
 
 <div class="container">
+    <div class = "float-right">
+        <form class="example" action="" style="margin:auto;max-width:400px">
+            <input type="text" placeholder="Search.." name="textsearch">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+    </div>
     <div class="table-responsive">
       <table class="table table-striped table-bordered">
         <thead>
@@ -100,10 +138,10 @@
             {% elif i <= 1 or i >= paginator.num_pages|add:"0" %}
               <li class="page-item">
                 <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-              </li>                   
+              </li>
             {% elif page_obj.number >=  i|add:"-1"  and page_obj.number <=  i|add:"1"%}
               <li class="page-item">
-                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                <a class="page-link" href="?page={{ i }}">{{ i }}</a>                
               </li>
             {% else %}
               <li class="page-item">
