--- a/templates/_base.html
+++ b/templates/_base.html
@@ -64,7 +64,7 @@
 
                     <li>
                         <a href="{% url 'Patient:List' 4 %}">
-                            <i class="fa fa-user" aria-hidden="true"></i></i> รายชื่อผู้ป่วย ทอ.
+                            <i class="fa fa-plane" aria-hidden="true"></i></i> รายชื่อผู้ป่วย ทอ.
                         </a>
                     </li>
 
