640722:1245 - Add Page title

--- a/Patient/templates/patient/List.html
+++ b/Patient/templates/patient/List.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load thaidate %}
 
-{% block title %}รายชื่อผู้ป่วย{% endblock %}
+{% block title %}{{ PageTitle }}{% endblock %}
 
 {% block content %}
     <style>    
