--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,13 +19,17 @@
     <!-- Standard iPhone Touch Icon-->
     <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
     <!-- Styles -->
-    <link href="{% static 'assets/css/lib/font-awesome.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'assets/css/lib/themify-icons.css ' %} " rel="stylesheet" />
-    <link href="{% static 'assets/css/lib/menubar/sidebar.css '%} " rel="stylesheet" />
-
-    <link href="{% static 'assets/css/lib/bootstrap.min.css '%} " rel="stylesheet" />
-    <link href="{% static 'assets/css/lib/helper.css '%} " rel="stylesheet" />
-    <link href="{% static 'assets/css/style.css '%} " rel="stylesheet" />
+    <link href="{% static 'assets/css/lib/calendar2/pignose.calendar.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/lib/chartist/chartist.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/lib/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/lib/themify-icons.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/lib/owl.carousel.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/lib/owl.theme.default.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/lib/weather-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/lib/menubar/sidebar.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/lib/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/lib/helper.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
 
 </head>
