--- a/templates/_base.html
+++ b/templates/_base.html
@@ -38,7 +38,7 @@
             <div class="nano-content">
                 <ul>
                     <div class="logo"><a href="{% url 'Patient:Dashboard' %}">
-                            <img class="pic" src="{% static 'assets/images/RTAF.png' %}" alt="" /><span>AFCOVID</span>
+                            <img class="pic" src="{% static 'assets/images/RTAF.png' %}" alt="" /><span>COVID19</span>
                             <style>
                                 .pic {
                                     width: 75px;
