--- a/Corona3/templates/Corona3/basicData.html
+++ b/Corona3/templates/Corona3/basicData.html
@@ -9,12 +9,16 @@
 
 <div class="row">
     <div class = "col-8">
+        {{ form.error }}
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <table class="table table-striped">
+                <col width="40%">
+                <col width="60%">
+
                 {{ form.as_table }}
             </table>
-            <input class="btn btn-primary" type="submit" value="Submit">
+            <input class="btn btn-primary" type="submit" value="ส่งข้อมูล">
         </form>
     </div>
 </div>
