--- a/Patient/templates/patient/List.html
+++ b/Patient/templates/patient/List.html
@@ -49,14 +49,19 @@
     </div>
     <div class="table-responsive">
       <table class="table table-striped table-bordered">
+        <col width="80">
+        <col width="250">
+        <col width="60">
+        <col width="40">
+        <col width="80">
+        <col width="80">
         <thead>
           <tr>
             <th>Date</th>
             <th>FullName (อายุ)</th>            
-            <th>หน่วยงาน</th>
+            <th>หน่วย</th>
             <th>PID</th>
-            <th>Positive เมื่อ</th>
-            <th>การรักษา</th>     
+            <th>Date +</th>
             <th>สถานะ</th>     
             <th>มือถือ</th>     
             <th colspan = 3>การจัดการ</th>     
@@ -78,32 +83,33 @@
                 {{ patient.Office}} 
             </td>
             <td>
-              {% if patient.IsPersonID  %}                    
-                    <i class="fas fa-check"></i></abbr>
+              {% if patient.IsPersonID  %}
+                  <abbr title="{{ patient.PersonID }}"><i class="fas fa-check"></i></abbr>                  
               {% endif %}
             </td>
             <td>{{ patient.DatePositive|thaidate:"d-m-y" }}</td>
-            <td>
-            
+            <td>            
               {{ patient.TreatmentIcon|safe }}
-            </td>
-            <td> 
 
-              {% if patient.get_CurrentStatus_display == 'ผู้ป่วยสีเขียว'%}
-                  <i class="fa fa-first-aid fa-lg" style="color:rgb(50,205,50)"></i>
-              {%elif patient.get_CurrentStatus_display == 'ผู้ป่วยสีเหลืองอ่อน'%}
-                  <i class="fa fa-first-aid fa-lg" style="color:rgb(255,255,0)"></i>
-              {%elif patient.get_CurrentStatus_display == 'ผู้ป่วยสีเหลืองเข้ม'%}
-                  <i class="fa fa-procedures fa-lg" style="color:rgb(246,199,0)"></i>
-              {%elif patient.get_CurrentStatus_display == 'ผู้ป่วยสีแดง'%}
-                  <i class="fa fa-procedures fa-lg" style="color:red"></i>
-              {%elif patient.get_CurrentStatus_display == 'หายป่วย'%}
-                  <i class="fa fa-walking fa-lg" style="color:blue"></i>
-              {%elif patient.get_CurrentStatus_display == 'เสียชีวิต'%}
-                  <i class="fa fa-bed fa-lg" style="color:black"></i>
-              {%else%}
-                  <i class="fa fa-question-circle fa-lg" style="color:rgb(160,160,160)"></i>
-              {% endif %}             
+              <span class="float-right">
+                <abbr title="{{ patient.get_CurrentStatus_display }}">
+                  {% if patient.get_CurrentStatus_display == 'ผู้ป่วยสีเขียว'%}
+                      <i class="fa fa-first-aid fa-lg" style="color:rgb(50,205,50)"></i>
+                  {%elif patient.get_CurrentStatus_display == 'ผู้ป่วยสีเหลืองอ่อน'%}
+                      <i class="fa fa-first-aid fa-lg" style="color:rgb(255,255,0)"></i>
+                  {%elif patient.get_CurrentStatus_display == 'ผู้ป่วยสีเหลืองเข้ม'%}
+                      <i class="fa fa-procedures fa-lg" style="color:rgb(246,199,0)"></i>
+                  {%elif patient.get_CurrentStatus_display == 'ผู้ป่วยสีแดง'%}
+                      <i class="fa fa-procedures fa-lg" style="color:red"></i>
+                  {%elif patient.get_CurrentStatus_display == 'หายป่วย'%}
+                      <i class="fa fa-walking fa-lg" style="color:blue"></i>
+                  {%elif patient.get_CurrentStatus_display == 'เสียชีวิต'%}
+                      <i class="fa fa-bed fa-lg" style="color:black"></i>
+                  {%else%}
+                      <i class="fa fa-question-circle fa-lg" style="color:rgb(160,160,160)"></i>
+                  {% endif %}     
+                <abbr>        
+              </span>
             </td>
             <td>{{ patient.Mobile }}</td>
             <td>
