640725:1657 - Add Unit Chart

--- a/Patient/templates/patient/List.html
+++ b/Patient/templates/patient/List.html
@@ -41,6 +41,9 @@
     </style>
 
 <div class="container">
+    <div class = "float-left">
+        <a href = "{% url 'Patient:AddNew' %}"class="btn   btn-success" role="button" >เพิ่มผู้ป่วย</a>
+    </div>
     <div class = "float-right">
         <form class="example" action="" style="margin:auto;max-width:400px">
             <input type="text" placeholder="Search.." name="textsearch">
@@ -50,10 +53,10 @@
     <div class="table-responsive">
       <table class="table table-striped table-bordered">
         <col width="80">
-        <col width="300">
-        <col width="150">
-        <col width="40">
-        <col width="80">
+        <col width="330">
+        <col width="100">
+        <col width="50">
+        <col width="90">
         <col width="100">
         <col width="120">
         <col width="80">
