--- a/Patient/templates/patient/dashboard.html
+++ b/Patient/templates/patient/dashboard.html
@@ -5,14 +5,15 @@
 
 {% block content %}
     <div class="row">                                    
-        <div class="col-lg-4 p-r-0 title-margin-right">
-            <div id="WeekChart"></div>
-        </div>
-        <div class="col-lg-8 p-r-0 title-margin-right">
+        <div class="col-lg-12">
             <div id="UnitChart"></div>
         </div>
     </div>
-
+    <div class="row">                                    
+        <div class="col-lg-6">
+            <div id="WeekChart"></div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block script %}
@@ -54,7 +55,7 @@ function drawChart() {
     var options = {
             title: "จำนวนผู้ป่วยย้อนหลัง 7 วัน",
             width: 500,
-            height: 400,
+            height: 500,
             bar: {groupWidth: "60%"},
             legend: { position: "left" },
         };
@@ -67,8 +68,17 @@ function drawChart() {
         {% for patient_count in UnitCount %}
             [
              '{{ patient_count.Office  }}', 
-             {{ patient_count.NumPatient }},             
-             'purple'
+             {{ patient_count.NumPatient }},   
+
+                {% if patient_count.NumPatient < 4 %}
+                   'RGB(254, 240, 1)'
+                {% elif  patient_count.NumPatient <  7 %}
+                    'RGB(253, 154, 1)'
+                {% elif   patient_count.NumPatient < 12 %}
+                    'RGB(253, 97, 4)'
+                {% else %}  
+                    'RGB(240, 5, 5)'          
+                {% endif %}
             ],
         {% endfor %}        
     ]);
@@ -82,9 +92,9 @@ function drawChart() {
                        2]);
   
     var optionsUnit = {
-            title: "จำนวนผู้ป่วยย้อนหลัง 7 วันแยกตามหน่วยงาน",
-            width: 800,
-            height: 400,
+            title: "ขรก.ประจำการป่วย ย้อนหลัง 7 วัน",
+            width: '100%',
+            height: 500,
             bar: {groupWidth: "60%"},
             legend: { position: "left" },
         };
