--- a/templates/_base.html
+++ b/templates/_base.html
@@ -41,7 +41,7 @@
         <div class="nano">
             <div class="nano-content">
                 <ul>
-                    <div class="logo"><a href="{% url 'Patient:Dashboard' %}">
+                    <div class="logo"><a href="{% url 'Patient:Dashboard7' %}">
                             <img class="pic" src="{% static 'assets/images/RTAF.png' %}" alt="" /><span>COVID19</span>
                             <style>
                                 .pic {
@@ -53,39 +53,40 @@
                             </style>
 
                         </a></div>
-                    <li class="label">Main</li>
+                    
                     <li>
-                        <a href="{% url 'Patient:Dashboard' %}">
-                            <i class="fa fa-signal" aria-hidden="true"></i> ภาพรวมผู้ป่วย 
+                        <a href="{% url 'Patient:Dashboard' 7 %}">
+                            <i class="fa fa-signal" aria-hidden="true"></i> ข้อมูลสรุป 
                         </a>
                     </li>
+                    <li class="label">ข้อมูลผู้ป่วย</li>
                     <li>
                         <a href="{% url 'Patient:List' 0 %}">
-                            <i class="fa fa-address-card" aria-hidden="true"></i> รายชื่อผู้ป่วยทั้งหมด
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="{% url 'Patient:List' 1 %}">
-                            <i class="fa fa-hospital" aria-hidden="true"></i></i> รายชื่อผู้มีข้อมูลใน AMED
+                            <i class="fa fa-address-card" aria-hidden="true"></i> รายชื่อทั้งหมด
                         </a>
                     </li>
 
                     <li>
                         <a href="{% url 'Patient:List' 4 %}">
-                            <i class="fa fa-plane" aria-hidden="true"></i></i> รายชื่อผู้ป่วย ทอ.
+                            <i class="fa fa-hospital" aria-hidden="true"></i></i> ผู้มีข้อมูลใน AMED
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="{% url 'Patient:List' 1 %}">
+                            <i class="fa fa-plane" aria-hidden="true"></i></i> ข้าราชการประจำ
                         </a>
                     </li>
 
                     <li>
                         <a href="{% url 'Patient:List' 2 %}">
-                            <i class="fa fa-user" aria-hidden="true"></i></i> รายชื่อผู้ป่วยพลทหาร
+                            <i class="fa fa-user" aria-hidden="true"></i></i> ทหารกองประจำการ (พลทหาร)
                         </a>
                     </li>
 
                     <li>
                         <a href="{% url 'Patient:List' 3 %}">
-                            <i class="fa fa-users" aria-hidden="true"></i></i> รายชื่อผู้ป่วยยกเว้นพลทหาร
+                            <i class="fa fa-users" aria-hidden="true"></i></i> ครอบครัว ทอ.
                         </a>
                     </li>
 
