640725:1703-add field to AMEDPatient

--- a/templates/_blank.html
+++ b/templates/_blank.html
@@ -41,7 +41,7 @@
         <div class="nano">
             <div class="nano-content">
                 <ul>
-                    <div class="logo"><a href="{% url 'Patient:Dashboard' %}">
+                    <div class="logo"><a href="{% url 'login' %}">
                             <img class="pic" src="{% static 'assets/images/RTAF.png' %}" alt="" /><span>COVID19</span>
                             <style>
                                 .pic {
