--- a/templates/_blank.html
+++ b/templates/_blank.html
@@ -94,7 +94,7 @@
             <div class="container-fluid">
                 
                 <div class="alert alert-primary alert-dismissible fade show" role="alert">
-                  <strong>ข้อมูล Corona3</strong>  กรุณากรอกเท่าที่สามารถกรอกได้ โดยหรอก 1 ฟอร์มต่อผู้ป่วย (หรือผู้ใกล้ชิด)  1 คน
+                  <strong>ข้อมูล Corona3</strong>  กรุณากรอกเท่าที่สามารถกรอกได้ โดยกรอก 1 ฟอร์มต่อผู้ป่วย (หรือผู้ใกล้ชิด)  1 คน
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
