--- a/Patient/templates/patient/List.html
+++ b/Patient/templates/patient/List.html
@@ -1,6 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
 {% load thaidate %}
+{% load custom_tag %}
 
 {% block title %}{{ PageTitle }}{% endblock %}
 
@@ -173,12 +174,12 @@
             {% if page_obj.number ==  i %}
               <li class="page-item"><a class="page-link active"><strong>{{ i }}</strong></a></li>
             {% elif i <= 4 or i >= paginator.num_pages|add:"-3" %}
-              <li class="page-item">
-                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+              <li class="page-item">              
+                <a class="page-link" href="{% url_replace request 'page' i %}">{{ i }}</a>
               </li>
             {% elif page_obj.number >=  i|add:"-3"  and page_obj.number <=  i|add:"3"%}
               <li class="page-item">
-                <a class="page-link" href="?page={{ i }}">{{ i }}</a>                
+                <a class="page-link" href="{% url_replace request 'page' i %}">{{ i }}</a>                
               </li>
             {% else %}
               <li class="page-item">
